Powercontrol page - create generation section - w\ adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -703,6 +703,66 @@
         </div>
       </section>
       <!-- SECTION APPLICATION :: END-->
+      <!-- SECTION generation :: START-->
+      <section class="generation" id="generation">
+        <div class="c-grid">
+          <div class="generation__wrapper generation__wrapper-0">
+            <div class="details__row details__row-2">
+              <div class="c-grid">
+                <div class="details__wrapper details__wrapper-2">
+                  <div class="details__wrapper-left"><img src="./img/img-details-7.jpg" srcset="./img/img-details-7@2x.jpg 2x" alt="" title=""></div>
+                  <div class="details__wrapper-right">
+                    <h2 class="details__title">Chiptuning nowej generacji</h2>
+                    <p class="details__text">PowerControl to produkt premium na rynku chiptuningu na świecie. Dlatego też jego obudowa wykonana jest z włókna szklanego, a wnętrze zalane specjalną żywicą epoksydową, aby chronić podzespoły elektroniczne.</p><a class="details__btn" href="#" title="">
+                      <div><span><i class="icon-font icon-play"></i></span></div>
+                      <div><span>Zobacz unboxing PowerControl</span></div></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="generation__wrapper generation__wrapper-1">
+            <div class="generation__block-wrapper">
+              <div class="generation__block generation__block-0">
+                <div class="generation__block-left"><img src="./img/img-generation.png" srcset="./img/img-generation@2x.png 2x" alt="" title=""></div>
+                <div class="generation__block-right">
+                  <p class="generation__block-title">Do 6 kanałów</p>
+                  <p class="generation__block-text">Moduł PowerControl łączony jest z silnikiem za pomocą minimum 3 a maksimum 6 specjalnie wyprodukowanych kabli (wyjątkiem są starsze konstrukcje diesla). Odróżnia to go od zwykłych produktów typu powerbox lub chiptuning box, które zazwyczaj maksymalnie obsługują 2 kanały (podłączenie za pomocą 2 kabli), a często nawet tylko jeden. Dodatkowe połączenia w PowerControl pozwalają na bezpieczniejszy tuning oraz na tworzenie prawdziwych, trójwymiarowych map dla silnika — tak jak to dzieje się w przypadku standardowego chiptuningu. Oznacza to znacznie większą kontrolę nad działaniem tuningu, a co za tym idzie bezproblemową eksploatację zmodyfikowanego silnika.</p>
+                </div>
+              </div>
+              <div class="generation__block generation__block-1">
+                <div class="generation__block-left"><img src="./img/img-generation.png" srcset="./img/img-generation@2x.png 2x" alt="" title=""></div>
+                <div class="generation__block-right">
+                  <p class="generation__block-title">Do 6 kanałów</p>
+                  <p class="generation__block-text">Moduł PowerControl łączony jest z silnikiem za pomocą minimum 3 a maksimum 6 specjalnie wyprodukowanych kabli (wyjątkiem są starsze konstrukcje diesla). Odróżnia to go od zwykłych produktów typu powerbox lub chiptuning box, które zazwyczaj maksymalnie obsługują 2 kanały (podłączenie za pomocą 2 kabli), a często nawet tylko jeden. Dodatkowe połączenia w PowerControl pozwalają na bezpieczniejszy tuning oraz na tworzenie prawdziwych, trójwymiarowych map dla silnika — tak jak to dzieje się w przypadku standardowego chiptuningu. Oznacza to znacznie większą kontrolę nad działaniem tuningu, a co za tym idzie bezproblemową eksploatację zmodyfikowanego silnika.</p>
+                </div>
+              </div>
+              <div class="generation__block generation__block-2">
+                <div class="generation__block-left"><img src="./img/img-generation.png" srcset="./img/img-generation@2x.png 2x" alt="" title=""></div>
+                <div class="generation__block-right">
+                  <p class="generation__block-title">Do 6 kanałów</p>
+                  <p class="generation__block-text">Moduł PowerControl łączony jest z silnikiem za pomocą minimum 3 a maksimum 6 specjalnie wyprodukowanych kabli (wyjątkiem są starsze konstrukcje diesla). Odróżnia to go od zwykłych produktów typu powerbox lub chiptuning box, które zazwyczaj maksymalnie obsługują 2 kanały (podłączenie za pomocą 2 kabli), a często nawet tylko jeden. Dodatkowe połączenia w PowerControl pozwalają na bezpieczniejszy tuning oraz na tworzenie prawdziwych, trójwymiarowych map dla silnika — tak jak to dzieje się w przypadku standardowego chiptuningu. Oznacza to znacznie większą kontrolę nad działaniem tuningu, a co za tym idzie bezproblemową eksploatację zmodyfikowanego silnika.</p>
+                </div>
+              </div>
+              <div class="generation__block generation__block-3">
+                <div class="generation__block-left"><img src="./img/img-generation.png" srcset="./img/img-generation@2x.png 2x" alt="" title=""></div>
+                <div class="generation__block-right">
+                  <p class="generation__block-title">Do 6 kanałów</p>
+                  <p class="generation__block-text">Moduł PowerControl łączony jest z silnikiem za pomocą minimum 3 a maksimum 6 specjalnie wyprodukowanych kabli (wyjątkiem są starsze konstrukcje diesla). Odróżnia to go od zwykłych produktów typu powerbox lub chiptuning box, które zazwyczaj maksymalnie obsługują 2 kanały (podłączenie za pomocą 2 kabli), a często nawet tylko jeden. Dodatkowe połączenia w PowerControl pozwalają na bezpieczniejszy tuning oraz na tworzenie prawdziwych, trójwymiarowych map dla silnika — tak jak to dzieje się w przypadku standardowego chiptuningu. Oznacza to znacznie większą kontrolę nad działaniem tuningu, a co za tym idzie bezproblemową eksploatację zmodyfikowanego silnika.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION generation :: END-->
+      <!-- SECTION wiring :: START-->
+      <section class="wiring" id="wiring">
+        <div class="c-grid">
+          <div class="wiring__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION wiring :: END-->
       <!-- SECTION types :: START-->
       <section class="types" id="types">
         <div class="types__wrapper types__wrapper-0">
