Powercontrol page - create wiring and created section - w\ adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -759,10 +759,98 @@
       <!-- SECTION wiring :: START-->
       <section class="wiring" id="wiring">
         <div class="c-grid">
-          <div class="wiring__wrapper"></div>
+          <div class="wiring__wrapper wiring__wrapper-0">
+            <div class="wiring__wrapper-left">
+              <div class="swiper-container swiper-container--wiring-0">
+                <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="./img/img-wiring-0.jpg" srcset="./img/img-wiring-0@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-0.jpg" srcset="./img/img-wiring-0@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-0.jpg" srcset="./img/img-wiring-0@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-0.jpg" srcset="./img/img-wiring-0@2x.jpg 2x" alt="" title=""></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+            <div class="wiring__wrapper-right">
+              <p class="wiring__title">Okablowanie</p>
+              <p class="wiring__text">Każdy model samochodu i jego silnik posiada indywidualny rodzaj okablowania. Jest ono często tworzone przy współpracy z producentami pojazdów. Dzięki temu nasze okablowanie jest w stu procentach zgodne i odpowiednie jakościowo do oryginalnego w Twoim samochodzie. Co ważne, okablowanie jest w całości produkowane w naszej fabryce w Niemczech. Pod żadnym pozorem nie jest to tani chiński zamiennik niskiej jakości.</p>
+            </div>
+          </div>
+          <div class="wiring__wrapper wiring__wrapper-1">
+            <div class="wiring__wrapper-left">
+              <p class="wiring__title">Instalacja</p>
+              <p class="wiring__text">Zadbaliśmy o to, aby proces instalacji był możliwie najprostszy. PowerControl może zamontować w swoim samochodzie każdy — nie trzeba posiadać specjalistycznej wiedzy, a zajmie to maksymalnie kilka minut. W razie jakichkolwiek problemów z instalacją wystarczy się z nami skontaktować, a zrobimy wszystko, co w naszej mocy, aby Ci pomóc. Nasza instrukcja instalacji jest spersonalizowana pod dany model samochodu i silnika, przez co ilustracje wiernie oddają to, co faktycznie widzisz u siebie pod maską. Obok znajduje się kilka przykładowych widoków z instrukcji instalacji PowerControl dla VW Golf VII 1.4 TSI.</p><a class="details__btn" href="#" title="">
+                <div><span><i class="icon-font icon-play"></i></span></div>
+                <div><span>Zobacz unboxing PowerControl</span></div></a>
+            </div>
+            <div class="wiring__wrapper-right">
+              <div class="swiper-container swiper-container--wiring-1">
+                <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="./img/img-wiring-1.jpg" srcset="./img/img-wiring-1@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-1.jpg" srcset="./img/img-wiring-1@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-1.jpg" srcset="./img/img-wiring-1@2x.jpg 2x" alt="" title=""></div>
+                                <div class="swiper-slide"><img src="./img/img-wiring-1.jpg" srcset="./img/img-wiring-1@2x.jpg 2x" alt="" title=""></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION wiring :: END-->
+      <!-- SECTION created :: START-->
+      <section class="created" id="created">
+        <div class="application__bg"><span></span><span></span><span></span></div>
+        <div class="c-grid">
+          <div class="created__wrapper">
+            <div class="assembly__header">
+              <div>
+                <p class="assembly__title">Jak powstaje program dla Twojego pojazdu</p>
+              </div>
+            </div>
+          </div>
+          <div class="assembly__wrapper">
+            <div class="assembly__wrapper-left">
+              <ul class="assembly__list">
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">1</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Pierwszy kontakt</h3>
+                    <p>Samochód otrzymujemy od producenta lub jego lokalnego przedstawiciela. Często dostajemy również wytyczne od producenta określające charakterystykę danego silnika oraz jego seryjne ograniczenia, co pomaga nam w ustaleniu jego bezpiecznych limitów.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">2</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Pomiary</h3>
+                    <p>Następnie wykonujemy wszelkie niezbędne pomiary elementów silnika, sczytujemy najważniejsze wartości z pojazdu oraz robimy kilkanaście pomiarów na hamowni celem określenia seryjnych parametrów. Sprawdzamy również zachowanie silnika pod różnym typem obciążenia.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">3</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Test samochodu</h3>
+                    <p>Opracowujemy następnie kilka map, które testujemy przez najbliższe dwa tygodnie. Silnik poddawany jest testom wytrzymałościowym oraz wydajnościowym. Sprawdzamy również działanie seryjnych zabezpieczeń silnika, aby upewnić się, że finalny program jest w stu procentach bezpieczny.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">4</span></div>
+                  <div>
+                    <h3>Instalacja</h3>
+                    <p>Dopiero po wykonaniu tych wszystkich czynności typujemy jeden, najlepszy program, który dostarcza zarówno dużego przyrostu mocy jak i momentu obrotowego, ale zarówno jest możliwie bezpieczny dla silnika. Za każdym razem musimy się upewnić, że silnik będzie pracował poprawnie w każdych warunkach i zachowa swoje parametry, nawet kiedy będzie przegrzany lub dostanie kiepskiej jakości paliwo. Przejście przez tak długi proces powoduje, że jesteśmy w stanie zaoferować naszym klientom rozszerzoną gwarancję na pojazd oraz otrzymać bardzo prestiżową certyfikację urzędu TÜV.</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="assembly__wrapper-right"><img src="./img/img-created-0.jpg" srcset="./img/img-created-0@2x.jpg 2x" alt="" title=""><img src="./img/img-created-1.jpg" srcset="./img/img-created-1@2x.jpg 2x" alt="" title=""></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION created :: END-->
       <!-- SECTION types :: START-->
       <section class="types" id="types">
         <div class="types__wrapper types__wrapper-0">
