Powercontrol page - create control section - w\ adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -851,6 +851,86 @@
         </div>
       </section>
       <!-- SECTION created :: END-->
+      <!-- SECTION control :: START-->
+      <section class="control" id="control">
+        <div class="c-grid">
+          <h1 class="control__title">Auta pracujące pod kontrolą PowerControl</h1>
+          <div class="control__wrapper">
+            <div class="swiper-container swiper-container--control">
+              <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-top"><img src="./img/img-control-0.jpg" srcset="./img/img-control-0@2x.jpg 2x" alt="" title=""></div>
+                              <div class="swiper-slide-bottom">
+                                <div>
+                                  <p class="control__name">Ferrari 488 GTB</p>
+                                </div>
+                                <div>
+                                  <div class="control__info">
+                                    <p>Moc silnika</p><img src="./img/img-control-moc.png" srcset="./img/img-control-moc@2x.png 2x" alt="" title=""><span>+30%</span>
+                                  </div>
+                                  <div class="control__info">
+                                    <p>Moment obrotowy</p><img src="./img/img-control-moment.png" srcset="./img/img-control-moment@2x.png 2x" alt="" title=""><span>+15%</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-top"><img src="./img/img-control-0.jpg" srcset="./img/img-control-0@2x.jpg 2x" alt="" title=""></div>
+                              <div class="swiper-slide-bottom">
+                                <div>
+                                  <p class="control__name">Ferrari 488 GTB</p>
+                                </div>
+                                <div>
+                                  <div class="control__info">
+                                    <p>Moc silnika</p><img src="./img/img-control-moc.png" srcset="./img/img-control-moc@2x.png 2x" alt="" title=""><span>+30%</span>
+                                  </div>
+                                  <div class="control__info">
+                                    <p>Moment obrotowy</p><img src="./img/img-control-moment.png" srcset="./img/img-control-moment@2x.png 2x" alt="" title=""><span>+15%</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-top"><img src="./img/img-control-0.jpg" srcset="./img/img-control-0@2x.jpg 2x" alt="" title=""></div>
+                              <div class="swiper-slide-bottom">
+                                <div>
+                                  <p class="control__name">Ferrari 488 GTB</p>
+                                </div>
+                                <div>
+                                  <div class="control__info">
+                                    <p>Moc silnika</p><img src="./img/img-control-moc.png" srcset="./img/img-control-moc@2x.png 2x" alt="" title=""><span>+30%</span>
+                                  </div>
+                                  <div class="control__info">
+                                    <p>Moment obrotowy</p><img src="./img/img-control-moment.png" srcset="./img/img-control-moment@2x.png 2x" alt="" title=""><span>+15%</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-top"><img src="./img/img-control-0.jpg" srcset="./img/img-control-0@2x.jpg 2x" alt="" title=""></div>
+                              <div class="swiper-slide-bottom">
+                                <div>
+                                  <p class="control__name">Ferrari 488 GTB</p>
+                                </div>
+                                <div>
+                                  <div class="control__info">
+                                    <p>Moc silnika</p><img src="./img/img-control-moc.png" srcset="./img/img-control-moc@2x.png 2x" alt="" title=""><span>+30%</span>
+                                  </div>
+                                  <div class="control__info">
+                                    <p>Moment obrotowy</p><img src="./img/img-control-moment.png" srcset="./img/img-control-moment@2x.png 2x" alt="" title=""><span>+15%</span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION control :: END-->
       <!-- SECTION types :: START-->
       <section class="types" id="types">
         <div class="types__wrapper types__wrapper-0">
