Powercontrol page - powercontrol section - full adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -113,7 +113,7 @@
         <div class="c-grid">
           <div class="powercontrol__wrapper">
             <div class="powercontrol__row powercontrol__row-0">
-              <div class="powercontrol__row-left"><img src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title=""></div>
+              <div class="powercontrol__row-left"><img class="powercontrol__img powercontrol__img--desktop" src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title=""><img class="powercontrol__img powercontrol__img--mobile" src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title=""></div>
               <div class="powercontrol__row-right">
                 <h1 class="powercontrol__title">PowerControl</h1>
                 <p class="powercontrol__text">Najlepszy na rynku moduł tuningowy</p>
@@ -129,7 +129,7 @@
                   </div>
                 </div>
                 <p class="powercontrol__text powercontrol__text--pb">Zapewnia wzrost mocy i momentu aż do 30%, a ponadto obniża spalanie samochodu do 1l na 100km.</p>
-                <p class="powercontrol__text">Pokochaj swój samochód – na nowo – dzięki chiptuningowi nowej generacji od firmy DTE Systems. <span>Made in Germany.</span></p>
+                <p class="powercontrol__text">Pokochaj swój samochód – na nowo – dzięki chiptuningowi nowej generacji od firmy DTE Systems. <span>Made in Germany.</span></p><img class="powercontrol__img powercontrol__img--dte" src="./img/img-powercontrol-dte.png" srcset="./img/img-powercontrol-dte@2x.png 2x" alt="" title="">
               </div>
             </div>
             <div class="powercontrol__row powercontrol__row-1"><a class="powercontrol__btn c-btn" href="#" title="">Poznaj PowerControl</a></div>
