--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -460,7 +460,7 @@
       <!-- SECTION article :: END-->
       <!-- SECTION assembly :: START-->
       <section class="assembly" id="assembly">
-        <div class="c-grid">
+        <div class="c-grid"><img class="assembly__img assembly__img--mobile" src="./img/img-assembly-0.jpg" srcset="./img/img-assembly-0@2x.jpg 2x" alt="" title="">
           <div class="assembly__header">
             <div>
               <p class="assembly__title">Montaż wraz z pomiarami na hamowni MAHA</p>
@@ -473,42 +473,42 @@
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">1</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Umów się</h3>
+                    <h3><span>1.</span>Umów się</h3>
                     <p><span>Skontaktuj się z nami</span>, aby umówić się na wybrany przez siebie termin. Pamiętaj, że zawsze z chęcią odpowiemy na wszystkie Twoje pytania — jesteśmy dla Was dostępni przez cały czas.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">2</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Przyjedź</h3>
+                    <h3><span>2.</span>Przyjedź</h3>
                     <p>Przed montażem oraz pomiarami, nasz pracownik przekaże Ci wszystkie dokumenty związane z Twoim zakupem oraz poinformuje o tym, jak będzie przebiegała procedura. Operacja trwa zazwyczaj od 1,5h do 2,5h a Ty możesz czekać na miejscu w komfortowej poczekalni.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">3</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Pierwsze pomiary</h3>
+                    <h3><span>3.</span>Pierwsze pomiary</h3>
                     <p>Wykonane zostaną pomiary Twojego auta przed modyfikacją, abyśmy mieli punkt odniesienia. Dysponujemy nowoczesną hamownią obciążeniową 4×4 firmy Dynoproject, więc możemy zmierzyć każdy rodzaj pojazdu.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">4</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Montaż oraz pomiary po modyfikacji</h3>
+                    <h3><span>4.</span>Montaż oraz pomiary po modyfikacji</h3>
                     <p>Przeprowadzimy montaż Performance Pack w Twoim pojeździe. Następnie wykonamy kolejne pomiary na hamowni celem wybrania najlepszego programu oraz ustawień dla Twojego samochodu.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">5</span></div>
                   <div>
-                    <h3>Odbiór pojazdu</h3>
+                    <h3><span>5.</span>Odbiór pojazdu</h3>
                     <p>Po modyfikacji zaprezentujemy Ci wynik wraz z nałożonymi na siebie wykresami przed i po modyfikacji, przez co będziesz mógł łatwo ocenić wyniki naszej pracy. Następnie pokażemy Ci, jak został zamontowany moduł oraz przekażemy wszelkie uwagi, abyś w przyszłości mógł samemu zdemontować moduł i okablowanie przed wizytą w serwisie. Odbędziemy też krótką jazdę próbną z Tobą, abyś finalnie mógł odebrać swój „nowy” samochód.</p>
                   </div>
                 </li>
               </ul>
             </div>
             <div class="assembly__wrapper-right"><img src="./img/img-assembly-0.jpg" srcset="./img/img-assembly-0@2x.jpg 2x" alt="" title=""><img src="./img/img-assembly-1.jpg" srcset="./img/img-assembly-1@2x.jpg 2x" alt="" title=""></div>
-          </div>
+          </div><img class="assembly__img assembly__img--mobile" src="./img/img-assembly-1.jpg" srcset="./img/img-assembly-1@2x.jpg 2x" alt="" title="">
         </div>
       </section>
       <!-- SECTION assembly :: END-->
