Powercontrol page - created section - full adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -806,7 +806,7 @@
       <section class="created" id="created">
         <div class="application__bg"><span></span><span></span><span></span></div>
         <div class="c-grid">
-          <div class="created__wrapper">
+          <div class="created__wrapper"><img class="created__img created__img--mobile" src="./img/img-created-0.jpg" srcset="./img/img-created-0@2x.jpg 2x" alt="" title="">
             <div class="assembly__header">
               <div>
                 <p class="assembly__title">Jak powstaje program dla Twojego pojazdu</p>
@@ -819,35 +819,35 @@
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">1</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Pierwszy kontakt</h3>
+                    <h3><span>1.</span>Pierwszy kontakt</h3>
                     <p>Samochód otrzymujemy od producenta lub jego lokalnego przedstawiciela. Często dostajemy również wytyczne od producenta określające charakterystykę danego silnika oraz jego seryjne ograniczenia, co pomaga nam w ustaleniu jego bezpiecznych limitów.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">2</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Pomiary</h3>
+                    <h3><span>2.</span>Pomiary</h3>
                     <p>Następnie wykonujemy wszelkie niezbędne pomiary elementów silnika, sczytujemy najważniejsze wartości z pojazdu oraz robimy kilkanaście pomiarów na hamowni celem określenia seryjnych parametrów. Sprawdzamy również zachowanie silnika pod różnym typem obciążenia.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">3</span><span class="assembly__list-line"></span></div>
                   <div>
-                    <h3>Test samochodu</h3>
+                    <h3><span>3.</span>Test samochodu</h3>
                     <p>Opracowujemy następnie kilka map, które testujemy przez najbliższe dwa tygodnie. Silnik poddawany jest testom wytrzymałościowym oraz wydajnościowym. Sprawdzamy również działanie seryjnych zabezpieczeń silnika, aby upewnić się, że finalny program jest w stu procentach bezpieczny.</p>
                   </div>
                 </li>
                 <li class="assembly__list-item">
                   <div><span class="assembly__list-num">4</span></div>
                   <div>
-                    <h3>Instalacja</h3>
+                    <h3><span>4.</span>Instalacja</h3>
                     <p>Dopiero po wykonaniu tych wszystkich czynności typujemy jeden, najlepszy program, który dostarcza zarówno dużego przyrostu mocy jak i momentu obrotowego, ale zarówno jest możliwie bezpieczny dla silnika. Za każdym razem musimy się upewnić, że silnik będzie pracował poprawnie w każdych warunkach i zachowa swoje parametry, nawet kiedy będzie przegrzany lub dostanie kiepskiej jakości paliwo. Przejście przez tak długi proces powoduje, że jesteśmy w stanie zaoferować naszym klientom rozszerzoną gwarancję na pojazd oraz otrzymać bardzo prestiżową certyfikację urzędu TÜV.</p>
                   </div>
                 </li>
               </ul>
             </div>
             <div class="assembly__wrapper-right"><img src="./img/img-created-0.jpg" srcset="./img/img-created-0@2x.jpg 2x" alt="" title=""><img src="./img/img-created-1.jpg" srcset="./img/img-created-1@2x.jpg 2x" alt="" title=""></div>
-          </div>
+          </div><img class="created__img created__img--mobile" src="./img/img-created-1.jpg" srcset="./img/img-created-1@2x.jpg 2x" alt="" title="">
         </div>
       </section>
       <!-- SECTION created :: END-->
