Powercontrol page - types section - full adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -937,6 +937,35 @@
           <div class="types__bg"><span></span><span></span><span></span></div>
           <div class="c-grid">
             <h1 class="types__title">Rodzaje programów</h1>
+            <div class="types__slider">
+              <div class="swiper-container swiper-container--types">
+                <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                  <div class="types__box types__box-0"><img src="./img/img-types-0.png" srcset="./img/img-types-0@2x.png 2x" alt="" title="">
+                                    <p class="types__box-title">Sport</p>
+                                    <p class="types__box-desc">(zmienia kolor diody na kolor czerwony)</p>
+                                    <p class="types__box-text">Najmocniejszy tryb pracy – tuning w pełnej okazałości. Idealny jeśli chcesz poczuć całą moc drzemiącą w Twoim samochodzie.</p>
+                                  </div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <div class="types__box types__box-1"><img src="./img/img-types-1.png" srcset="./img/img-types-1@2x.png 2x" alt="" title="">
+                                    <p class="types__box-title">Dynamic</p>
+                                    <p class="types__box-desc">(zmienia kolor diody na kolor żółty)</p>
+                                    <p class="types__box-text">Jest to idealny tryb do codziennej jazdy, kiedy potrzebujemy większej dynamiki, ale nadal dbamy o ekonomię jazdy.</p>
+                                  </div>
+                                </div>
+                                <div class="swiper-slide">
+                                  <div class="types__box types__box-2"><img src="./img/img-types-2.png" srcset="./img/img-types-2@2x.png 2x" alt="" title="">
+                                    <p class="types__box-title">Eco</p>
+                                    <p class="types__box-desc">(zmienia kolor diody na kolor zielony)</p>
+                                    <p class="types__box-text">Najlepszy tryb do typowej jazdy miejskiej od świateł do świateł. Charakteryzuje się przede wszystkim oszczędnością paliwa.</p>
+                                  </div>
+                                </div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+            </div>
             <div class="types__box-wrapper">
               <div class="types__box types__box-0"><img src="./img/img-types-0.png" srcset="./img/img-types-0@2x.png 2x" alt="" title="">
                 <p class="types__box-title">Sport</p>
