--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -154,12 +154,13 @@
                       <div class="c-form__group-col c-form__group-col-0">
                         <div class="c-form__field c-form__field--select">
                           <div class="c-form__select-wrap">
-                            <select name="" select-js>
-                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
-                              <option value="1">Marka</option>
-                              <option value="1">Marka</option>
-                              <option value="1">Marka</option>
-                              <option value="1">Marka</option>
+                            <select name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js>
+                              <option value="1">Marka 1</option>
+                              <option value="2">Marka 2</option>
+                              <option value="3">Marka 3</option>
+                              <option value="4">Marka 4</option>
+                              <option value="5">Marka 5</option>
+                              <option value="6">Marka 6</option>
                             </select>
                           </div>
                         </div>
@@ -167,12 +168,13 @@
                       <div class="c-form__group-col c-form__group-col-1">
                         <div class="c-form__field c-form__field--select">
                           <div class="c-form__select-wrap">
-                            <select name="" select-js>
-                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
-                              <option value="1">Model</option>
-                              <option value="1">Model</option>
-                              <option value="1">Model</option>
-                              <option value="1">Model</option>
+                            <select name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js>
+                              <option value="1">Model 1</option>
+                              <option value="2">Model 2</option>
+                              <option value="3">Model 3</option>
+                              <option value="4">Model 4</option>
+                              <option value="5">Model 5</option>
+                              <option value="6">Model 6</option>
                             </select>
                           </div>
                         </div>
@@ -180,12 +182,13 @@
                       <div class="c-form__group-col c-form__group-col-2">
                         <div class="c-form__field c-form__field--select">
                           <div class="c-form__select-wrap">
-                            <select name="" select-js>
-                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
-                              <option value="1">Silnik</option>
-                              <option value="1">Silnik</option>
-                              <option value="1">Silnik</option>
-                              <option value="1">Silnik</option>
+                            <select name="" placeholder="Pokażemy Ci co możemy z nim zrobić!" select-js>
+                              <option value="1">Silnik 1</option>
+                              <option value="2">Silnik 2</option>
+                              <option value="3">Silnik 3</option>
+                              <option value="4">Silnik 4</option>
+                              <option value="5">Silnik 5</option>
+                              <option value="6">Silnik 6</option>
                             </select>
                           </div>
                         </div>
