--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -113,7 +113,9 @@
         <div class="c-grid">
           <div class="powercontrol__wrapper">
             <div class="powercontrol__row powercontrol__row-0">
-              <div class="powercontrol__row-left"><img class="powercontrol__img powercontrol__img--desktop" src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title=""><img class="powercontrol__img powercontrol__img--mobile" src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title=""></div>
+              <div class="powercontrol__row-left">
+                <div class="powercontrol__img-wrapper"><img class="powercontrol__img powercontrol__img--desktop" src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title=""><img class="powercontrol__img powercontrol__img--mobile" src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title=""><img class="powercontrol__img powercontrol__img--dte-desktop" src="./img/img-powercontrol-dte-desktop.png" srcset="./img/img-powercontrol-dte-desktop@2x.png 2x" alt="" title=""></div>
+              </div>
               <div class="powercontrol__row-right">
                 <h1 class="powercontrol__title">PowerControl</h1>
                 <p class="powercontrol__text">Najlepszy na rynku moduł tuningowy</p>
