Home page - redesign section.

--- a/dest/index.html
+++ b/dest/index.html
@@ -180,7 +180,7 @@
                 </div>
               </form>
             </div>
-            <div class="main__wrapper-right"><img src="./img/img-car-main.png" srcset="" alt="" title=""></div>
+            <div class="main__wrapper-right"><img src="./img/img-car-main-1.png" srcset="" alt="" title=""></div>
           </div>
         </div>
       </section>
@@ -189,26 +189,22 @@
       <section class="info" id="info">
         <div class="c-grid">
           <div class="info__wrapper">
-            <div class="info__box-wrapper">
-              <div class="info__box info__box-0">
+            <div class="info__box-wrapper"><a class="info__box info__box-0" href="#">
                 <div class="info__box-title">
-                  <p>Felgi</p><span></span>
+                  <p>Podręcenie mocy</p><span>na gwarancji</span>
                 </div>
-                <div class="info__box-img"><img src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""><img src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title=""></div>
-              </div>
-              <div class="info__box info__box-1">
+                <div class="info__box-image"><img src="./img/img-box-info-0.png" srcset="./img/img-box-info-0@2x.png 2x" alt="" title=""></div>
+                <div class="info__box-square"></div></a><a class="info__box info__box-1" href="#">
                 <div class="info__box-title">
-                  <p>Układ wydechowy</p><span></span>
+                  <p>Pedalbox</p>
                 </div>
-                <div class="info__box-img"><img src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""><img src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title=""></div>
-              </div>
-              <div class="info__box info__box-2">
+                <div class="info__box-image"><img src="./img/img-box-info-1.png" srcset="./img/img-box-info-1@2x.png 2x" alt="" title=""></div>
+                <div class="info__box-square"></div></a><a class="info__box info__box-2" href="#">
                 <div class="info__box-title">
-                  <p>Podręcenie mocy</p><span>w samochodach na gwarancji</span>
+                  <p>O nas</p>
                 </div>
-                <div class="info__box-img"><img src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""><img src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title=""></div>
-              </div>
-            </div>
+                <div class="info__box-image"><img src="./img/img-box-info-2.png" srcset="./img/img-box-info-2@2x.png 2x" alt="" title=""></div>
+                <div class="info__box-square"></div></a></div>
           </div>
         </div>
       </section>
